--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ body{
 .dropdown:hover{
     background-color: black;
     transition: 0.5s;
+    border-radius: 5px;
 }
+
 .header {
     position: sticky;
     top: 0;
